<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Input Fields -->
    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_check_amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number_of_people"
        android:inputType="number" />

    <!-- Compute Button -->
    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute" />

    <!-- Tip and Total Outputs -->
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteen_percent_tip" />
    <TextView
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twenty_percent_tip" />
    <TextView
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twentyfive_percent_tip" />
    <TextView
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteen_percent_total" />
    <TextView
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twenty_percent_total" />
    <TextView
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twentyfive_percent_total" />
    <TextView
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>